WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
323045
[iOS] Media controls context menus can appear at the wrong position with Site Isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=323045
Summary
[iOS] Media controls context menus can appear at the wrong position with Site...
Andy Estes
Reported
2026-08-31 17:26:19 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2026-08-31 17:26:20 PDT
<
rdar://problem/179129739
>
Andy Estes
Comment 2
2026-08-31 17:29:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/72895
EWS
Comment 3
2026-09-01 09:57:34 PDT
Committed
320249@main
(99127ce297d9): <
https://commits.webkit.org/320249@main
> Reviewed commits have been landed. Closing PR #72895 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug